--- a/.github/workflows/feishu-notify-template.yml
+++ b/.github/workflows/feishu-notify-template.yml
@@ -1,31 +1,21 @@
-name: Feishu Notify Template (No Relay, Noise Control)
+name: Feishu Notify Template (No Relay, Noise Control, Stable)
 
 on:
   workflow_call:
     inputs:
       important_labels:
-        description: "逗号分隔：命中这些标签才更倾向通知（issue 必须命中；PR 命中即可放宽其他条件）"
-        required: false
         default: "urgent,security,release-blocker"
         type: string
       important_paths_regex:
-        description: "关键目录正则（命中其一即可通知），例如 ^(apps/web/|infra/|payment/|security/)"
-        required: false
         default: "^(apps/web/|infra/|payment/|security/)"
         type: string
       pr_min_changed_files:
-        description: "PR 变更文件数阈值（>= 则通知）。0 表示不按大小过滤"
-        required: false
         default: "0"
         type: string
       title_keywords_regex:
-        description: "标题/描述关键字正则（命中则通知）"
-        required: false
         default: "(hotfix|rollback|security|incident)"
         type: string
       notify_issue_on_open_close_without_labels:
-        description: "Issue 在 opened/closed 时未命中关键标签也通知？true/false"
-        required: false
         default: "false"
         type: string
     secrets:
@@ -43,16 +33,20 @@ jobs:
       ISSUE_NOTIFY_LOOSE: ${{ inputs.notify_issue_on_open_close_without_labels }}
     steps:
       - name: Decide & Send (PR / Issue)
+        shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
           set -euo pipefail
 
+          echo "::group::Event payload"
+          echo '${{ toJson(github.event) }}' | jq -C . | sed -e 's/^/  /'
+          echo "::endgroup::"
+
           EVENT_NAME="${{ github.event_name }}"
           ACTION="${{ github.event.action }}"
           REPO="${{ github.repository }}"
           SENDER="${{ github.actor }}"
-          ORG="${{ github.repository_owner }}"
           API="${{ github.api_url }}"
 
           should_send=0
@@ -61,14 +55,12 @@ jobs:
           body_md=""
           url=""
 
-          # ---------- helpers ----------
           contains_label () {
-            labels_csv="$1"
-            IFS=',' read -r -a arr <<< "$labels_csv"
+            local wanted_csv="$1"
+            local labels_csv="$2"
+            IFS=',' read -r -a arr <<< "$wanted_csv"
             for l in "${arr[@]}"; do
-              if echo "$2" | grep -Eiq "(^|,)\ *${l}\ *(,|$)"; then
-                return 0
-              fi
+              if echo "$labels_csv" | grep -Eiq "(^|,)\ *${l}\ *(,|$)"; then return 0; fi
             done
             return 1
           }
@@ -77,9 +69,7 @@ jobs:
             jq -r '(.pull_request.labels // .issue.labels // []) | map(.name) | join(",")' <<< '${{ toJson(github.event) }}'
           }
 
-          # ---------- pull_request ----------
-          if [ "$EVENT_NAME" = "pull_request" ]; then
-            # key fields
+          if [[ "$EVENT_NAME" == "pull_request" ]]; then
             PR_NUM="${{ github.event.pull_request.number }}"
             PR_TITLE="${{ github.event.pull_request.title }}"
             PR_BODY="$(jq -r '.pull_request.body // ""' <<< '${{ toJson(github.event) }}')"
@@ -90,58 +80,53 @@ jobs:
             PR_MERGED="${{ github.event.pull_request.merged }}"
             LABELS="$(to_csv_labels)"
 
-            # ---- baseline: 关键节点才考虑 ----
-            if [ "$ACTION" = "opened" ] || [ "$ACTION" = "ready_for_review" ] || { [ "$ACTION" = "closed" ] && [ "$PR_MERGED" = "true" ]; }; then
+            # 关键节点
+            case "$ACTION" in
+              opened|ready_for_review) should_send=1 ;;
+              closed) [[ "$PR_MERGED" == "true" ]] && should_send=1 ;;
+            esac
+
+            # 其他触发条件（命中其一即可）
+            contains_label "$IMP_LABELS" "$LABELS" && should_send=1
+            echo "$PR_TITLE $PR_BODY" | grep -Eiq "$KW_REGEX" && should_send=1
+            if [[ "$PR_MIN_FILES" =~ ^[0-9]+$ ]] && (( PR_CHANGED >= PR_MIN_FILES )); then
               should_send=1
             fi
 
-            # ---- 命中关键标签/关键字/变更规模/路径 均可触发 ----
-            if contains_label "$IMP_LABELS" "$LABELS"; then should_send=1; fi
-            if echo "$PR_TITLE $PR_BODY" | grep -Eiq "$KW_REGEX"; then should_send=1; fi
-            if [ "$PR_MIN_FILES" -gt 0 ] && [ "$PR_CHANGED" -ge "$PR_MIN_FILES" ]; then should_send=1; fi
-
-            # 路径过滤：仅当变更命中关键目录才放宽（用 API 拿文件列表）
-            curl -s -H "Accept: application/vnd.github+json" \
-                 -H "Authorization: Bearer $GH_TOKEN" \
-                 "$API/repos/$REPO/pulls/$PR_NUM/files?per_page=200" > files.json
+            # 路径过滤（命中关键目录也触发）
+            echo "Fetching changed files for path filter…"
+            curl -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GH_TOKEN" \
+              "$API/repos/$REPO/pulls/$PR_NUM/files?per_page=200" > files.json
             if jq -r '.[].filename' files.json | grep -Eq "$IMP_PATHS"; then
               should_send=1
             fi
 
-            # ---- 配色与标题 ----
             card_title="PR · $REPO #$PR_NUM · $ACTION"
             header_color="blue"
-            if [ "$ACTION" = "closed" ] && [ "$PR_MERGED" = "true" ]; then header_color="green"; fi
-
-            # ---- 文案 ----
+            [[ "$ACTION" == "closed" && "$PR_MERGED" == "true" ]] && header_color="green"
             url="$PR_URL"
             body_md="**Title:** $PR_TITLE\n**By:** $SENDER\n**From:** $PR_FROM → **To:** $PR_TO\n**Changed files:** $PR_CHANGED"
 
-          # ---------- issues ----------
-          elif [ "$EVENT_NAME" = "issues" ]; then
+          elif [[ "$EVENT_NAME" == "issues" ]]; then
             ISSUE_NUM="${{ github.event.issue.number }}"
             ISSUE_TITLE="${{ github.event.issue.title }}"
             ISSUE_BODY="$(jq -r '.issue.body // ""' <<< '${{ toJson(github.event) }}')"
             ISSUE_URL="${{ github.event.issue.html_url }}"
             LABELS="$(to_csv_labels)"
 
-            # 基线：只在 opened/closed/reopened 下考虑
-            if [ "$ACTION" = "reopened" ]; then
+            if [[ "$ACTION" == "reopened" ]]; then
               should_send=1
-            elif [ "$ACTION" = "opened" ] || [ "$ACTION" = "closed" ]; then
-              # 默认：必须命中标签或关键词才发；可通过输入参数放宽
+            elif [[ "$ACTION" == "opened" || "$ACTION" == "closed" ]]; then
               if contains_label "$IMP_LABELS" "$LABELS" || echo "$ISSUE_TITLE $ISSUE_BODY" | grep -Eiq "$KW_REGEX"; then
                 should_send=1
-              elif [ "$ISSUE_NOTIFY_LOOSE" = "true" ]; then
+              elif [[ "$ISSUE_NOTIFY_LOOSE" == "true" ]]; then
                 should_send=1
               fi
             fi
 
             card_title="Issue · $REPO #$ISSUE_NUM · $ACTION"
-            header_color="wathet"
-            [ "$ACTION" = "closed" ] && header_color="purple"
+            header_color="wathet"; [[ "$ACTION" == "closed" ]] && header_color="purple"
             url="$ISSUE_URL"
-            # 取前 200 字做摘要
             SUMMARY="$(printf "%s" "$ISSUE_BODY" | tr '\n' ' ' | cut -c1-200)"
             body_md="**Title:** $ISSUE_TITLE\n**By:** $SENDER\n**Labels:** ${LABELS:-—}\n**Summary:** ${SUMMARY:-—}"
 
@@ -150,27 +135,15 @@ jobs:
             exit 0
           fi
 
-          if [ "$should_send" -ne 1 ]; then
+          if [[ "$should_send" -ne 1 ]]; then
             echo "Noise filtered. Skip sending."
             exit 0
           fi
 
-          # ---------- 发送飞书交互卡片 ----------
-          cat > card.json <<EOF
+          cat > card.json <<'JSON'
           {
             "msg_type": "interactive",
             "card": {
-              "header": { "template": "${header_color}", "title": { "tag": "plain_text", "content": "${card_title}" } },
+              "header": { "template": "__COLOR__", "title": { "tag": "plain_text", "content": "__TITLE__" } },
               "elements": [
-                { "tag": "div", "text": { "tag": "lark_md", "content": "${body_md//\"/\\\"}" } },
-                { "tag": "action", "actions": [
-                  { "tag": "button", "text": { "tag": "plain_text", "content": "🔗 Open in GitHub" }, "type": "primary", "url": "${url}" }
-                ]}
-              ]
-            }
-          }
-          EOF
-
-          curl -s -X POST '${{ secrets.FEISHU_WEBHOOK }}' \
-               -H 'Content-Type: application/json' \
-               -d @card.json | cat
+                { "tag": "div", "text": { "tag": "lark_md", "content": "_
